# graphstruc

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ford.md  fpm.toml
example/: example.f90
src/: graphstruc.f90  graphstruc_kinds.f90  graphstruc_sub.f90
src/graphstruc/: graphstruc_types.f90  graphstruc_types_sub.f90
test/: CMakeLists.txt  test_edge.f90  test_graph.f90  test_vertex.f90
